@@ -1,3 +1,7 @@
+- Check for math functions
+
+- Use *joerc if *fancyjoerc not there.
+
 - fix segfault from -orphan
 
 - fix window size detection bug: can't take out types.h
